<resources>
    <string name="app_name">Firebase Database</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Already a Member! Join in</string>
    <string name="btn_forgot_password">Forgot</string>
    <string name="btn_link_to_register">Not a member yet! Sign Up</string>
    <string name="prompt_new_email">New Email</string>
    <string name="prompt_password_new">New Password</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Password Reset</string>
    <string name="remove_user">Remove</string>
    <string name="btn_sign_out">Sign out</string>
    <string name="btn_link_to_login">Have an account! Login</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="forgot_password_msg">Enter your registered email to receive new password</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="prompt_change_email">Change Email</string>
    <string name="change_email_msg">Enter your current and new email address below to complete the process</string>
    <string name="prompt_email_new">New Email</string>
    <string name="prompt_email_current">Current Email</string>
    <string name="btn_change_email">Change Email</string>
    <string name="prompt_change_password">Change Your Password</string>
    <string name="prompt_change_password_msg">Its been so long now. Time to change your password</string>
    <string name="prompt_email_password">Current Password</string>
    <string name="btn_change_password">Change Password</string>
    <string name="welcome">Welcome User!! if you are reading this text you have been successfully logged in Congratulations !!!</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="loading">Authenticating</string>
    <string name="btn_fp_back">Dont want to change !!</string>
</resources>
